2000-12-21  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_wrapper.c: moved logistics of reconnect to this module,
	instead than in smsc.c

	* gw/smsc.*: removed lots of public functions (the old interface)

	* gw/bb_smsc.c: remove depricated code
	
2000-12-21  Kalle Marjola  <rpr@wapit.com>

	* gw/bearerbox.*: use smsc2_ functions for new bb_smscconn,
	renaming in a near future
	
	* gw/smsc.c: modified to use gwthread_sleep instead of plain
	sleep, so that no need for 'semi-busy sleep' during reconnect

	* gw/smscconn*.*: added missing functions, these should now work

	* gw/smsc_wrapper.c: finished, including program flow etc.
	
2000-12-21  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc.c: added missing breaks to _reopen

2000-12-21  Derry Hamilton <rasilon@tardis.ed.ac.uk>
	
	* gw/wap-appl.c: Fixed race condition, between updating and
	deleting stuff in id_to_request_data and caller simultaneously

2000-12-20  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_smscconn_cb.c: renamed as bb_smscconn.c and includes all
	code in old bb_smsc.c - will replace the old system as soon as I
	get last missing functions ready and the system tested

	* gw/smscconn.* added that shutdown can either empty the internal
	queue first or do a quick shutdown, putting all messages into
	failed list

2000-12-20  Derry Hamilton <rasilon@tardis.ed.ac.uk>
	* gwlib/gwthread.h, gwlib/gwthread-pthread.c, gw/bearerbox.c,
	config.h.in:  Combined patches from Nick Clarey and myself
	that cope with POSIX-but-not-quite threads.  My head hurts.
	
2000-12-19  Richard Braakman  <dark@wapit.com>

	* gwlib/dict.c: Improve description of Dict fields.

2000-12-19  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_wrapper.c: it is ready - to be tested out. Next: new
	bb_smsc.c, so the wrapper can be checked out

2000-12-19  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_emi.c: fixed that NULL pointer is not tried to be
	printed

2000-12-18  Kalle Marjola  <rpr@wapit.com>
